fixed issue with spacing on form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -182,11 +182,16 @@ form label {
   font-family: 'Source Serif Pro', serif;
 }
 
-form div {
+.form-column{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 100%;
 }
+
+.form-column label { 
+  text-align: center;
+}
+
 form input[type="text"],
 form input[type="number"],
 form input[type="tel"],
