--- a/app/assets/stylesheets/contacts.css
+++ b/app/assets/stylesheets/contacts.css
@@ -65,6 +65,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .form-content{
